--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -140,10 +140,10 @@
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
         <property name="spacing">
-         <number>0</number>
+         <number>9</number>
         </property>
         <property name="margin">
-         <number>0</number>
+         <number>9</number>
         </property>
         <item>
          <widget class="QStackedWidget" name="stackedWidget_2">
@@ -171,8 +171,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>758</width>
-                 <height>553</height>
+                 <width>740</width>
+                 <height>535</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="projects_mainpane_layout"/>
@@ -194,7 +194,10 @@
           </widget>
           <widget class="QWidget" name="projectview_page">
            <layout class="QHBoxLayout" name="horizontalLayout_12">
-            <property name="bottomMargin">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="margin">
              <number>0</number>
             </property>
             <item>
@@ -264,8 +267,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>732</width>
-                   <height>488</height>
+                   <width>738</width>
+                   <height>479</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="projectview_verticalLayout">
@@ -307,6 +310,12 @@
         <string>Contexts</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_12">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="margin">
+         <number>9</number>
+        </property>
         <item>
          <widget class="QStackedWidget" name="stackedWidget_3">
           <property name="currentIndex">
@@ -314,6 +323,12 @@
           </property>
           <widget class="QWidget" name="contexts_page">
            <layout class="QHBoxLayout" name="horizontalLayout_10">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="margin">
+             <number>0</number>
+            </property>
             <item>
              <widget class="QScrollArea" name="scrollArea_6">
               <property name="frameShape">
@@ -327,8 +342,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>716</width>
-                 <height>517</height>
+                 <width>740</width>
+                 <height>535</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="contexts_mainpane_layout">
@@ -356,32 +371,74 @@
            </layout>
           </widget>
           <widget class="QWidget" name="contextview_page">
-           <layout class="QHBoxLayout" name="horizontalLayout_11">
+           <layout class="QHBoxLayout" name="horizontalLayout_13">
+            <property name="spacing">
+             <number>0</number>
+            </property>
+            <property name="margin">
+             <number>0</number>
+            </property>
             <item>
-             <widget class="QScrollArea" name="scrollArea_7">
-              <property name="widgetResizable">
-               <bool>true</bool>
-              </property>
-              <widget class="QWidget" name="scrollAreaWidgetContents_9">
-               <property name="geometry">
-                <rect>
-                 <x>0</x>
-                 <y>0</y>
-                 <width>714</width>
-                 <height>515</height>
-                </rect>
-               </property>
-               <layout class="QVBoxLayout" name="verticalLayout_15">
+             <layout class="QVBoxLayout" name="verticalLayout_2">
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_11">
                 <item>
-                 <widget class="QLabel" name="label_4">
+                 <widget class="QPushButton" name="contextBackButton">
+                  <property name="maximumSize">
+                   <size>
+                    <width>50</width>
+                    <height>16777215</height>
+                   </size>
+                  </property>
+                  <property name="text">
+                   <string>&lt;&lt;</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="QLabel" name="contextLabel">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="font">
+                   <font>
+                    <family>Liberation Sans</family>
+                    <pointsize>16</pointsize>
+                   </font>
+                  </property>
                   <property name="text">
                    <string>Specific Context View Page</string>
                   </property>
                  </widget>
                 </item>
                </layout>
-              </widget>
-             </widget>
+              </item>
+              <item>
+               <widget class="QScrollArea" name="scrollArea_7">
+                <property name="widgetResizable">
+                 <bool>true</bool>
+                </property>
+                <widget class="QWidget" name="scrollAreaWidgetContents_9">
+                 <property name="geometry">
+                  <rect>
+                   <x>0</x>
+                   <y>0</y>
+                   <width>736</width>
+                   <height>496</height>
+                  </rect>
+                 </property>
+                 <layout class="QVBoxLayout" name="contextview_verticalLayout">
+                  <property name="margin">
+                   <number>0</number>
+                  </property>
+                 </layout>
+                </widget>
+               </widget>
+              </item>
+             </layout>
             </item>
             <item>
              <widget class="QWidget" name="widget_7" native="true">
@@ -391,7 +448,7 @@
                 <height>0</height>
                </size>
               </property>
-              <layout class="QVBoxLayout" name="verticalLayout_16"/>
+              <layout class="QVBoxLayout" name="contextDetails_sidepane_layout"/>
              </widget>
             </item>
            </layout>
@@ -399,6 +456,10 @@
          </widget>
         </item>
        </layout>
+       <zorder>stackedWidget_3</zorder>
+       <zorder></zorder>
+       <zorder>scrollArea_7</zorder>
+       <zorder>widget_7</zorder>
       </widget>
       <widget class="QWidget" name="calendar_tab">
        <attribute name="title">
