--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -57,8 +57,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>728</width>
-                 <height>553</height>
+                 <width>734</width>
+                 <height>564</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_4"/>
@@ -116,8 +116,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>736</width>
-             <height>535</height>
+             <width>762</width>
+             <height>556</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="starred_mainpane_layout"/>
@@ -174,8 +174,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>758</width>
-                 <height>553</height>
+                 <width>764</width>
+                 <height>564</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="projects_mainpane_layout"/>
@@ -277,8 +277,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>100</width>
-                   <height>30</height>
+                   <width>762</width>
+                   <height>514</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="projectview_verticalLayout">
@@ -352,8 +352,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>758</width>
-                 <height>553</height>
+                 <width>764</width>
+                 <height>564</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="contexts_mainpane_layout"/>
@@ -428,6 +428,9 @@
               </item>
               <item>
                <widget class="QScrollArea" name="scrollArea_7">
+                <property name="frameShape">
+                 <enum>QFrame::NoFrame</enum>
+                </property>
                 <property name="widgetResizable">
                  <bool>true</bool>
                 </property>
@@ -436,8 +439,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>98</width>
-                   <height>28</height>
+                   <width>762</width>
+                   <height>531</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="contextview_verticalLayout">
@@ -492,8 +495,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>654</width>
-             <height>535</height>
+             <width>672</width>
+             <height>556</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_3"/>
@@ -531,8 +534,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>654</width>
-             <height>535</height>
+             <width>672</width>
+             <height>556</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="tickler_mainpane_layout"/>
@@ -573,8 +576,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>778</width>
-             <height>553</height>
+             <width>784</width>
+             <height>564</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="done_mainpane_layout"/>
