--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -212,6 +212,9 @@
             </property>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout">
+              <property name="margin">
+               <number>4</number>
+              </property>
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_8">
                 <item>
@@ -277,8 +280,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>762</width>
-                   <height>514</height>
+                   <width>756</width>
+                   <height>508</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="projectview_verticalLayout">
@@ -390,6 +393,9 @@
             </property>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout_2">
+              <property name="margin">
+               <number>4</number>
+              </property>
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_11">
                 <item>
@@ -439,8 +445,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>762</width>
-                   <height>531</height>
+                   <width>756</width>
+                   <height>525</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="contextview_verticalLayout">
