--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -57,8 +57,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>764</width>
-                 <height>564</height>
+                 <width>758</width>
+                 <height>553</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_4"/>
@@ -103,6 +103,12 @@
         <string>Starred</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="margin">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QScrollArea" name="starred_mainpane">
           <property name="frameShape">
@@ -116,8 +122,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>78</width>
-             <height>22</height>
+             <width>768</width>
+             <height>553</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="starred_mainpane_layout"/>
@@ -132,7 +138,14 @@
             <height>0</height>
            </size>
           </property>
-          <layout class="QVBoxLayout" name="starred_sidepane_layout"/>
+          <layout class="QVBoxLayout" name="starred_sidepane_layout">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <property name="margin">
+            <number>0</number>
+           </property>
+          </layout>
          </widget>
         </item>
        </layout>
@@ -174,8 +187,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>764</width>
-                 <height>564</height>
+                 <width>758</width>
+                 <height>553</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="projects_mainpane_layout"/>
@@ -280,8 +293,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>57</width>
-                   <height>16</height>
+                   <width>100</width>
+                   <height>30</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="projectview_verticalLayout">
@@ -355,8 +368,8 @@
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>80</width>
-                 <height>30</height>
+                 <width>758</width>
+                 <height>553</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="contexts_mainpane_layout"/>
@@ -445,8 +458,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>57</width>
-                   <height>16</height>
+                   <width>100</width>
+                   <height>30</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="contextview_verticalLayout">
@@ -501,8 +514,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>44</width>
-             <height>22</height>
+             <width>654</width>
+             <height>535</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_3"/>
@@ -540,8 +553,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>44</width>
-             <height>22</height>
+             <width>654</width>
+             <height>535</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="tickler_mainpane_layout"/>
@@ -582,8 +595,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>100</width>
-             <height>30</height>
+             <width>778</width>
+             <height>553</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="done_mainpane_layout"/>
