--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
 <title>{{ page.title }}</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <meta http-equiv="content-language" content="en" />
-<link rel="stylesheet" href="/css/styles.css" type="text/css" />
+<link rel="stylesheet" href="css/styles.css" type="text/css" />
 </head>
 
 <body>
