--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -325,8 +325,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>760</width>
-                   <height>507</height>
+                   <width>100</width>
+                   <height>30</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="projectview_verticalLayout">
@@ -497,8 +497,8 @@
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>760</width>
-                   <height>526</height>
+                   <width>100</width>
+                   <height>30</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="contextview_verticalLayout">
@@ -540,6 +540,12 @@
         <string>Calendar</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_7">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="margin">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QScrollArea" name="scrollArea_4">
           <property name="frameShape">
@@ -553,11 +559,15 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>664</width>
-             <height>551</height>
+             <width>768</width>
+             <height>569</height>
             </rect>
            </property>
-           <layout class="QVBoxLayout" name="verticalLayout_3"/>
+           <layout class="QVBoxLayout" name="verticalLayout_3">
+            <property name="margin">
+             <number>4</number>
+            </property>
+           </layout>
           </widget>
          </widget>
         </item>
@@ -565,11 +575,18 @@
          <widget class="QWidget" name="widget_4" native="true">
           <property name="minimumSize">
            <size>
-            <width>100</width>
+            <width>20</width>
             <height>0</height>
            </size>
           </property>
-          <layout class="QVBoxLayout" name="calendar_sidepane_layout"/>
+          <layout class="QVBoxLayout" name="calendar_sidepane_layout">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <property name="margin">
+            <number>0</number>
+           </property>
+          </layout>
          </widget>
         </item>
        </layout>
