--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -151,7 +151,14 @@
              <height>569</height>
             </rect>
            </property>
-           <layout class="QVBoxLayout" name="starred_mainpane_layout"/>
+           <layout class="QVBoxLayout" name="starred_mainpane_layout">
+            <property name="spacing">
+             <number>3</number>
+            </property>
+            <property name="margin">
+             <number>4</number>
+            </property>
+           </layout>
           </widget>
          </widget>
         </item>
@@ -655,7 +662,14 @@
              <height>569</height>
             </rect>
            </property>
-           <layout class="QVBoxLayout" name="done_mainpane_layout"/>
+           <layout class="QVBoxLayout" name="done_mainpane_layout">
+            <property name="spacing">
+             <number>3</number>
+            </property>
+            <property name="margin">
+             <number>4</number>
+            </property>
+           </layout>
           </widget>
          </widget>
         </item>
