--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -603,6 +603,12 @@
         <string>Tickler</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
+        <property name="spacing">
+         <number>0</number>
+        </property>
+        <property name="margin">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QScrollArea" name="tickler_mainpane">
           <property name="frameShape">
@@ -616,11 +622,15 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>664</width>
-             <height>551</height>
+             <width>768</width>
+             <height>569</height>
             </rect>
            </property>
-           <layout class="QVBoxLayout" name="tickler_mainpane_layout"/>
+           <layout class="QVBoxLayout" name="tickler_mainpane_layout">
+            <property name="margin">
+             <number>4</number>
+            </property>
+           </layout>
           </widget>
          </widget>
         </item>
@@ -628,11 +638,18 @@
          <widget class="QWidget" name="tickler_sidepane" native="true">
           <property name="minimumSize">
            <size>
-            <width>100</width>
+            <width>20</width>
             <height>0</height>
            </size>
           </property>
-          <layout class="QVBoxLayout" name="tickler_sidepane_layout"/>
+          <layout class="QVBoxLayout" name="tickler_sidepane_layout">
+           <property name="spacing">
+            <number>0</number>
+           </property>
+           <property name="margin">
+            <number>0</number>
+           </property>
+          </layout>
          </widget>
         </item>
        </layout>
