--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -696,6 +696,39 @@
        <attribute name="title">
         <string>Statistics</string>
        </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_15">
+        <property name="margin">
+         <number>0</number>
+        </property>
+        <item>
+         <widget class="QScrollArea" name="scrollArea_8">
+          <property name="frameShape">
+           <enum>QFrame::NoFrame</enum>
+          </property>
+          <property name="widgetResizable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="scrollAreaWidgetContents_11">
+           <property name="geometry">
+            <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>788</width>
+             <height>569</height>
+            </rect>
+           </property>
+           <layout class="QVBoxLayout" name="statslayout">
+            <property name="spacing">
+             <number>3</number>
+            </property>
+            <property name="margin">
+             <number>4</number>
+            </property>
+           </layout>
+          </widget>
+         </widget>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="settings_tab">
        <attribute name="title">
